Fix:POST,PUT_Config_&POST,PUT_Layout
